platform/deploy/infra/vector-router/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vector-router
  namespace: vector-router
spec:
  selector:
    app: vector-router
  ports:
    - port: 8085
      targetPort: 8085
