platform/deploy/infra/vector-router/templates/destinationrule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: vector-router
spec:
  host: vector-router
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
  subsets:
    - name: stable
      labels:
        app: vector-router
    - name: canary
      labels:
        version: canary
